// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchButton should render 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`SearchButton should render with dense searchStyle 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`SearchButton should render with dense searchStyle 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`SearchButton should render with dense searchStyle 3`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`SearchButton should render with different states 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`SearchButton should render with different states 2`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #55e1a7;
}

.c4 svg g,
.c4 svg p {
  fill: #55e1a7;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c0 .c3 {
  position: absolute;
  right: 0;
  top: 0;
  outline: none;
}

.c0 .c3:focus svg {
  fill: #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

.c2 {
  top: 14px;
  position: absolute;
  right: 16px;
  height: 100%;
}

.c2 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 0;
  outline: none;
}

.c2 > button:focus svg {
  fill: #999999;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
  <div
    className="c2"
  >
    <span
      className="c3 c4"
      color="success"
      height={20}
      width={20}
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.85 19.44l-4-4a2.44 2.44 0 00-.43-.35l-1-.69A7 7 0 1010 17a7 7 0 004.37-1.53l.75 1a2.6 2.6 0 00.3.36l4 4a.5.5 0 00.71 0l.7-.7a.5.5 0 00.02-.69zM10 15a5 5 0 115-5 5 5 0 01-5 5z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SearchButton should render with different states 3`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #e24c4c;
}

.c4 svg g,
.c4 svg p {
  fill: #e24c4c;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c0 .c3 {
  position: absolute;
  right: 0;
  top: 0;
  outline: none;
}

.c0 .c3:focus svg {
  fill: #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

.c2 {
  top: 14px;
  position: absolute;
  right: 16px;
  height: 100%;
}

.c2 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 0;
  outline: none;
}

.c2 > button:focus svg {
  fill: #999999;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
  <div
    className="c2"
  >
    <span
      className="c3 c4"
      color="error"
      height={20}
      width={20}
    >
      <svg
        height={80}
        width={80}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M76.875 12.25l-29 29 29 29-7.375 7.375-29-29-29 29-7.375-7.375 29-29-29-29L11.5 4.875l29 29 29-29z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SearchButton should render with errorMessage 1`] = `
.c5 {
  color: #e24c4c;
  font-size: 12px;
  line-height: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #e24c4c;
}

.c4 svg g,
.c4 svg p {
  fill: #e24c4c;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c0 .c3 {
  position: absolute;
  right: 0;
  top: 0;
  outline: none;
}

.c0 .c3:focus svg {
  fill: #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

.c2 {
  top: 14px;
  position: absolute;
  right: 16px;
  height: 100%;
}

.c2 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 0;
  outline: none;
}

.c2 > button:focus svg {
  fill: #999999;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
  <div
    className="c2"
  >
    <span
      className="c3 c4"
      color="error"
      height={20}
      width={20}
    >
      <svg
        height={80}
        width={80}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M76.875 12.25l-29 29 29 29-7.375 7.375-29-29-29 29-7.375-7.375 29-29-29-29L11.5 4.875l29 29 29-29z"
        />
      </svg>
    </span>
  </div>
  <span
    className="c5"
    color="error"
    fontSize="xxs"
  >
    error message
  </span>
</div>
`;

exports[`SearchButton should render with helper component 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
  max-width: 300px;
  border-radius: 60px;
  border: 1px solid #E5E5E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  padding-left: 16px;
  padding-right: 32px;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 48px;
  line-height: 28px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c1::-webkit-input-placeholder {
  color: #666666;
}

.c1::-moz-placeholder {
  color: #666666;
}

.c1:-ms-input-placeholder {
  color: #666666;
}

.c1::placeholder {
  color: #666666;
}

<div
  className="c0"
>
  <input
    autoFocus={false}
    className="c1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    type="text"
  />
</div>
`;
